--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,12 @@ html {
 body {
     font-family: "Cairo", sans-serif;
 }
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+.hero {
+    background-image: url(./assets/main-app-2.png) !important;
+    background-size: 100% 100% !important;
+    background-position: center !important;
+    background-repeat: no-repeat;
+}
